[tool.poetry]
name = "data-enrich"
version = "0.1.0"
description = ""
authors = ["William Callaghan <william@georgian.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.2.1"
bs4 = "^0.0.2"
pandas = "^2.2.2"
joblib = "~1.3"
validators = "^0.28.1"
urlextract = "^1.9.0"
dspy-ai = "^2.4.9"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.37"
langchain = "^0.1.17"
playwright = "^1.43.0"
openpyxl = "^3.1.2"
selenium = "^4.20.0"
matplotlib = "^3.9.0"
sseclient = "^0.0.27"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
ruff = "^0.4.1"
lxml-stubs = "^0.5.1"
pandas-stubs = "^2.2.1.240316"
types-requests = "^2.31.0.20240406"
types-beautifulsoup4 = "^4.12.0.20240229"
nbconvert = "^7.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
